[package]
name = "sigue-claude"
version = "0.1.0"
edition = "2024"
description = "Sigue — auto-retry wrapper for Claude Code rate limits"

[dependencies]
regex = "1"
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
