[package]
name = "sigue-claude"
version = "0.1.0"
edition = "2024"
description = "Auto-retry wrapper for Claude Code rate limits"
license = "MIT"
repository = "https://github.com/amloren1/sigue-claude"
readme = "README.md"
keywords = ["claude", "rate-limit", "retry", "cli", "tmux"]
categories = ["command-line-utilities"]

[dependencies]
regex = "1"
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
